// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/CheckBox Disabled 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "
         <script>",
    "</script>
         ",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
            <div class=\\"form-check\\">
                <input type=\\"checkbox\\" class=\\"form-check-input\\" ?checked=",
        "  ?disabled=",
        " id=\\"customCheck111-33\\" />
                <label class=",
        " for=\\"customCheck111-33\\">Check this custom checkbox</label>
            </div>
        ",
      ],
      "values": Array [
        false,
        true,
        "form-check-label ",
      ],
    },
    undefined,
  ],
}
`;

exports[`Storyshots Forms/CheckBox Disabled Selected 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "
         <script>",
    "</script>
         ",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
            <div class=\\"form-check\\">
                <input type=\\"checkbox\\" class=\\"form-check-input\\" ?checked=",
        "  ?disabled=",
        " id=\\"customCheck111-33\\" />
                <label class=",
        " for=\\"customCheck111-33\\">Check this custom checkbox</label>
            </div>
        ",
      ],
      "values": Array [
        true,
        true,
        "form-check-label ",
      ],
    },
    undefined,
  ],
}
`;

exports[`Storyshots Forms/CheckBox Group 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "
         <script>",
    "</script>
         ",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
        <fieldset>
            <legend>Group Label</legend>
            ",
        "
        </fieldset>
        ",
      ],
      "values": Array [
        Array [
          Object {
            "_$litType$": 1,
            "strings": Array [
              "
            <div class=\\"form-check\\">
                <input type=\\"checkbox\\" class=\\"form-check-input\\" ?checked=",
              "  ?disabled=",
              " id=\\"customCheck",
              "\\" />
                <label class=",
              " for=\\"customCheck111-33\\">Check this custom checkbox</label>
            </div>",
            ],
            "values": Array [
              false,
              false,
              1,
              "form-check-label ",
            ],
          },
          Object {
            "_$litType$": 1,
            "strings": Array [
              "
            <div class=\\"form-check\\">
                <input type=\\"checkbox\\" class=\\"form-check-input\\" ?checked=",
              "  ?disabled=",
              " id=\\"customCheck",
              "\\" />
                <label class=",
              " for=\\"customCheck111-33\\">Check this custom checkbox</label>
            </div>",
            ],
            "values": Array [
              false,
              false,
              2,
              "form-check-label ",
            ],
          },
          Object {
            "_$litType$": 1,
            "strings": Array [
              "
            <div class=\\"form-check\\">
                <input type=\\"checkbox\\" class=\\"form-check-input\\" ?checked=",
              "  ?disabled=",
              " id=\\"customCheck",
              "\\" />
                <label class=",
              " for=\\"customCheck111-33\\">Check this custom checkbox</label>
            </div>",
            ],
            "values": Array [
              false,
              false,
              3,
              "form-check-label ",
            ],
          },
          Object {
            "_$litType$": 1,
            "strings": Array [
              "
            <div class=\\"form-check\\">
                <input type=\\"checkbox\\" class=\\"form-check-input\\" ?checked=",
              "  ?disabled=",
              " id=\\"customCheck",
              "\\" />
                <label class=",
              " for=\\"customCheck111-33\\">Check this custom checkbox</label>
            </div>",
            ],
            "values": Array [
              false,
              false,
              4,
              "form-check-label ",
            ],
          },
          Object {
            "_$litType$": 1,
            "strings": Array [
              "
            <div class=\\"form-check\\">
                <input type=\\"checkbox\\" class=\\"form-check-input\\" ?checked=",
              "  ?disabled=",
              " id=\\"customCheck",
              "\\" />
                <label class=",
              " for=\\"customCheck111-33\\">Check this custom checkbox</label>
            </div>",
            ],
            "values": Array [
              false,
              false,
              5,
              "form-check-label ",
            ],
          },
        ],
      ],
    },
    undefined,
  ],
}
`;

exports[`Storyshots Forms/CheckBox Indeterminate 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "
         <script>",
    "</script>
         ",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
            <div class=\\"form-check\\">
                <input type=\\"checkbox\\" class=\\"form-check-input\\" ?checked=",
        "  ?disabled=",
        " id=\\"customCheck111-33\\" />
                <label class=",
        " for=\\"customCheck111-33\\">Check this custom checkbox</label>
            </div>
        ",
      ],
      "values": Array [
        false,
        false,
        "form-check-label ",
      ],
    },
    "
      document.getElementById('customCheck111-33').indeterminate = true;
    ",
  ],
}
`;

exports[`Storyshots Forms/CheckBox Standard 1`] = `
Object {
  "_$litType$": 1,
  "strings": Array [
    "",
    "
         <script>",
    "</script>
         ",
  ],
  "values": Array [
    Object {
      "_$litType$": 1,
      "strings": Array [
        "
            <div class=\\"form-check\\">
                <input type=\\"checkbox\\" class=\\"form-check-input\\" ?checked=",
        "  ?disabled=",
        " id=\\"customCheck111-33\\" />
                <label class=",
        " for=\\"customCheck111-33\\">Check this custom checkbox</label>
            </div>
        ",
      ],
      "values": Array [
        false,
        false,
        "form-check-label ",
      ],
    },
    undefined,
  ],
}
`;
